# pdf2md

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: article.md  book.md
src/pdf2md/: __init__.py  cli.py  converter.py  errors.py  image_handler.py  models.py  output_writer.py  pipeline.py  section_splitter.py
tests/: conftest.py  test_cli.py  test_converter.py  test_errors.py  test_image_handler.py  test_integration.py  test_models.py  test_output_writer.py  test_pipeline.py  test_section_splitter.py  test_table_format.py  tests.md
